fixed button spacing on portfolio and project-overview pages for small screens

--- a/app/sass/pages/_portfolio.scss
+++ b/app/sass/pages/_portfolio.scss
@@ -105,7 +105,10 @@ li.project {
 			}
 			&:first-child {
 				color:$indigo-500;
-				margin-right:2rem;
+				margin-right:1rem;
+				@include media($mobile) {
+					margin-right:2rem;
+				}
 			}
 			&:nth-child(2) {
 				color:$pink-500;
