--- a/app/sass/partials/_grid.scss
+++ b/app/sass/partials/_grid.scss
@@ -1,4 +1,4 @@
-$mobile: new-breakpoint(min-width 320px);
+$mobile: new-breakpoint(min-width 350px);
 $tablet: new-breakpoint(min-width 480px);
 $desktop: new-breakpoint(min-width 768px);
 $ninefifty: new-breakpoint(min-width 950px);
